监听程序增加了打印日志，.service文件中增加了总是重启，保证应用因故障退出后仍能重新启动

--- a/v2-ui.service
+++ b/v2-ui.service
@@ -6,6 +6,7 @@ Wants=network.target
 [Service]
 Type=simple
 ExecStart=/usr/local/v2-ui/v2-ui
+Restart=Always
 
 [Install]
 WantedBy=multi-user.target
