--- a/v2-node.service
+++ b/v2-node.service
@@ -5,7 +5,8 @@ Wants=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/local/node/node
+ExecStart=/usr/local/v2-node/v2-node
+Restart=Always
 
 [Install]
 WantedBy=multi-user.target
